[package]
name = "btc-transaction-utils"
version = "0.7.0"
edition = "2018"
description = "A collection of helpers for signing bitcoin transactions with segwit."
authors = ["The Exonum Team <exonum@bitfury.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/exonum/btc-transaction-utils"
documentation = "https://docs.rs/btc-transaction-utils"
categories = ["cryptography"]
keywords = ["crypto", "bitcoin", "segwit"]

[dependencies]
bitcoin = { version = "0.20" }
bitcoin_hashes = "0.7"
failure = "0.1"
failure_derive = "0.1"
hex = "0.3"
rand = "0.6"
secp256k1 = { version = "0.15", features = ["rand"] }
serde = "1.0"
serde_str = "0.1"

[dev-dependencies]
rand_xorshift = "0.1"