[package]
name = "btc-transaction-utils"
version = "0.9.0"
edition = "2018"
description = "A collection of helpers for signing bitcoin transactions with segwit."
authors = ["The Exonum Team <exonum@bitfury.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/exonum/btc-transaction-utils"
documentation = "https://docs.rs/btc-transaction-utils"
categories = ["cryptography"]
keywords = ["crypto", "bitcoin", "segwit"]

[dependencies]
bitcoin = "0.23"
bitcoin_hashes = "0.7"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
rand = "0.6"
secp256k1 = { version = "0.17", features = ["rand"] }
serde = "1.0"
serde_str = "0.1"
